[tool.poetry]
name = "resource-proxy-manager"
version = "0.0.1"
description = ""
authors = ["craftsangjae <craftsangjae@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "resource_proxy_manager" }]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
boto3 = "^1.34.49"
kubernetes = "^29.0.0"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
click = "8.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# pytest 설정 정보
[tool.pytest.ini_options]
minversion = "6.0"

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
